--- a/adm/style/acp_contentsecurety_body.html
+++ b/adm/style/acp_contentsecurety_body.html
@@ -149,7 +149,7 @@
 </fieldset>
 
 <fieldset>
-	<legend>{L_ACP_SUBMIT}</legend>
+	<legend>{L_ACP_SUBMIT_CHANGES}</legend>
 	<p class="submit-buttons">
 		<input class="button1" type="submit" id="submit" name="submit" value="{L_SUBMIT}" />&nbsp;
 		<input class="button2" type="reset" id="reset" name="reset" value="{L_RESET}" />
